# smith-windows

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  QWEN.md  README.md  brief.md  check_all.sh  check_screenshot.bat  insight.html  run_all.bat  run_all.sh  run_all_checks.bat  run_build.bat  run_bundle.bat  run_bundle.sh  run_check.bat  run_check.sh  run_check_selector.bat  run_check_selector.sh  run_check_set_text.bat  run_check_toggle.bat  run_clippy.bat  run_clippy_selector.sh  run_fmt.bat  run_readme_size.bat  run_test_all.bat  selector_recorder.rs  temp_build.sh  temp_check.sh  temp_check.txt  temp_test.sh  test_automation.rs  test_build.bat
.github/workflows/: ci.yml  context-update.yml
.qwen/agents/: smith-architect.md  smith-coder.md  smith-compliance.md  smith-crate-researcher.md  smith-debugger.md  smith-planner.md
docs/adr/: 001-click-tool.md  002-automation-session.md  003-inspect-tool.md  003-selector-storage.md  004-set-text-tool.md  005-input-text-tool.md  006-wait-tool.md  007-screenshot-tool.md  008-read-tool.md  009-scroll-tool.md  013-focus-tool.md  015-clipboard-tool.md
docs/crates/: anyhow.md  async-trait.md  clipboard.md  global-hotkey.md  regex.md  report-hotkey-cursor.md  serde.md  serde_json.md  thiserror.md  tokio-util.md  tokio.md  tracing-subscriber.md  tracing.md  uiautomation-advanced.md  uiautomation.md  uiautomation_keyboard_input.md  uiautomation_keyboard_input_report.md  windows-input.md
docs/templates/: brief-template.md  contract-template.md  specification-template.md  test-plan-template.md
examples/: README.md  batch_selectors.json  click_example.rs  demo.rs  inspect_basic.rs  inspect_interactive.rs  interactive_selector_capture.rs  notepad_automation_session.rs  notepad_click.rs  notepad_inspect.rs  right_click_example.rs  saved_selectors.json  selector_storage_and_click.rs
src/: lib.rs
src/core/: automation_session.rs  click.rs  clipboard.rs  focus.rs  input.rs  input_text.rs  inspect.rs  mod.rs  read.rs  right_click.rs  screenshot.rs  scroll.rs  selector.rs  selector_recorder.rs  selector_storage.rs  set_text.rs  toggle.rs  type.rs  wait.rs  window_control.rs
tests/: automation_session_tests.rs  click.rs  input_text_tests.rs  inspect_tests.rs  integration.rs  read_tool.rs  set_text.rs  wait_tests.rs  window_control.rs
tools/: bundle_context.rs
(+91 files in other folders)
