[package]
name = "smith-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uiautomation = "0.24.4"
trybuild = "1.0.116"
regex = "1.12.3"
clipboard = "0.5"

[target.'cfg(windows)'.dependencies]

[[bin]]
name = "bundle_context"
path = "tools/bundle_context.rs"

[lib]
name = "smith_windows"
path = "src/lib.rs"

[[example]]
name = "click_example"
path = "examples/click_example.rs"

[[example]]
name = "notepad_click"
path = "examples/notepad_click.rs"
