[package]
name = "smith-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uiautomation = "0.24.4"
arboard = "3.4"
trybuild = "1.0.116"
regex = "1.12.3"
clipboard = "0.5"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Memory"
] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[[bin]]
name = "bundle_context"
path = "tools/bundle_context.rs"

[lib]
name = "smith_windows"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[example]]
name = "click_example"
path = "examples/click_example.rs"

[[example]]
name = "notepad_click"
path = "examples/notepad_click.rs"

[[example]]
name = "inspect_interactive"
path = "examples/inspect_interactive.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "selector_storage_and_click"
path = "examples/selector_storage_and_click.rs"

[[example]]
name = "interactive_selector_capture"
path = "examples/interactive_selector_capture.rs"

[[example]]
name = "right_click_example"
path = "examples/right_click_example.rs"
